infrastructure/standalone/conf/api/api.yaml
#
# Copyright 2021 Merck & Co., Inc. Kenilworth, NJ, USA.
#
#	Licensed to the Apache Software Foundation (ASF) under one
#	or more contributor license agreements. See the NOTICE file
#	distributed with this work for additional information
#	regarding copyright ownership. The ASF licenses this file
#	to you under the Apache License, Version 2.0 (the
#	"License"); you may not use this file except in compliance
#	with the License. You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
#
#	Unless required by applicable law or agreed to in writing,
#	software distributed under the License is distributed on an
#	"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
#	KIND, either express or implied. See the License for the
#	specific language governing permissions and limitations
#	under the License.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      hostname: api
      containers:
        - name: api
          image: ghcr.io/big-wave-tech/data-profiler/api
          command: ["/bin/bash"]
          args:
            [
              "-c",
              "env > /opt/api/target/universal/stage/.env && set -o allexport && source /opt/api/target/universal/stage/.env && ./bin/dataprofiler-api-launcher-minikube.sh",
            ]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          stdin: true
          tty: true
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
              cpu: "1"
